# orbslam3-zmq-bridge

./: CMakeLists.txt  Dockerfile  README.md
d435i/: zmq_debug.py  zmq_streaming.py
include/orbslam3_rgbd_zmq_bridge/: slam_runner.hpp  zmq_util.hpp
orb_slam3/: CMakeLists.txt
orb_slam3/config/Monocular/: isaac-sim.yaml
orb_slam3/config/RGBD/: RealSense_D435i.yaml  TUM1.yaml
orb_slam3/include/: System.h
orb_slam3/src/: System.cc  Tracking.cc
src/: main.cpp  slam_runner.cpp  zmq_util.cpp
